# job-scout

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
prompts/: job_score.txt  resume_parse.txt
src/job_scout/: cli.py  config.py  filters.py  models.py  profile.py  score.py  search.py
tests/: test_config.py  test_filters.py  test_models.py  test_profile.py  test_score.py  test_search.py
tests/fixtures/serpapi/: deal_breaker_title.json  no_salary.json  no_sponsorship.json  paginated_page1.json  paginated_page2.json  remote_listing.json  standard_listing.json
tests/golden/: 01_senior_backend_remote_h1b_python.json  02_staff_swe_san_diego_backend_platform.json  03_senior_swe_remote_python_apis_silent_visa.json  04_senior_platform_engineer_remote_swe_devops.json  05_senior_fullstack_remote_python_react.json  06_senior_swe_san_diego_java_primary.json  07_senior_swe_remote_good_fit_low_salary.json  08_senior_devops_sre_remote_ops_primary.json  09_senior_data_scientist_remote_ml.json  10_senior_ios_engineer_remote_swift.json
