[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "job-scout"
version = "0.1.0"
description = "AI-powered job-search agent"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "anthropic>=0.28.0",
    "pdfplumber>=0.11.0",
    "pypdf>=4.2.0",
    "jinja2>=3.1.4",
    "structlog>=24.2.0",
    "cryptography>=42.0.0",
    "pyyaml>=6.0.1",
    "resend>=2.0.0",
]

[project.scripts]
scout = "job_scout.cli:app"

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "types-pyyaml>=6.0.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/job_scout"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = []

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff.lint.isort]
known-first-party = ["job_scout"]

[[tool.mypy.overrides]]
module = ["pdfplumber", "pdfplumber.*"]
ignore_missing_imports = true
